[package]
name = "envelope-system"
version = "0.1.0"
authors = [
  "Shahar Or (mightyiam) <mightyiampresence@gmail.com>",
  "Joe Gomain Hoyes <gomain@gmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
derive_more = "0.99"
thiserror = "1.0"

[dev-dependencies]
cool_asserts = "1.0.2"
