[package]
name = "bookkeeping"
version = "0.4.7"
authors = ["Shahar Or (mightyiam) <mightyiampresence@gmail.com>"]
edition = "2018"
description = "Minimalistic and unopinionated bookkeeping library."
license = "ISC"
repository = "https://github.com/mightyiam/bookkeeping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "0.4.0"

[dev_dependencies]
maplit = "1.0.2"
rusty-hook = "0.11.2"

[features]
fail-on-warnings = []
